	extra argument giving first line of section to look for.  Search 
	backwards if beginning of search is after the end of search.
	* info/search.c (looking_at_line): New function.

	* info/nodes.c (build_tags_and_nodes): Call find_file_section to 
	find end and start of tags table.
	(get_nodes_of_tags_table): Assume we are passed the exact offset 
	of the separator preceding the tag table.

2014-12-26  Eli Zaretskii  <eliz@gnu.org>

	* info/info-utils.c (nl_langinfo) [__MINGW32__]: Redirect to
	rpl_nl_langinfo, defined on pcterm.c.
	(degrade_utf8): Add replacements for 'point', 'print', and
	'expansion' symbols used by Texinfo.

	* info/pcterm.c (WIN32_LEAN_AND_MEAN): Define.
	<old_outpmode, output_cp>: New static variables.
	(w32_info_prep): Disable the wrap-at-eol on console output.
	(w32_cleanup): Restore the original position of the cursor.
	(write_utf): New function, writes UTF-8 and UTF-7 text to console.
	(pc_put_text, pc_write_chars) [__MINGW32__]: Call it when the
	output console codepage is UTF-8 or UTF-7.
	(rpl_nl_langinfo): New function, returns the Windows console's
	output codepage and requests transliteration from libiconv.

2014-12-26  Jason Hood  <jadoxa@yahoo.com.au>  (tiny change)

	* info/pcterm.c (ScreenVisualBell): Fix setting visual attribute
	on the mode line.

2014-12-26  Eli Zaretskii  <eliz@gnu.org>

	* info/info-utils.c (fncmp) [__MSDOS__ || __MINGW32__]: Now
	external.  Move the #define for Posix hosts ...

	* info/info-utils.h (fncmp): ...to here.  Declare a prototype for
	__MSDOS__ and __MINGW32__.

	* info/infopath.c (infopath_add_dir): If the inode values are
	zero, use file-name comparison as fallback.

2014-12-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/search.c (find_node_separator, skip_node_separator): 
	Allow optional '\r' before '\n' after Ctrl-_ node separator.

	* info/info-utils.c (parse_top_node_line),
	* info/nodes.c (get_nodes_of_info_file),
	* info/search.c (find_node_in_binding): Include '\r' in list of 